--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
+        "chokidar": "^3.5.3",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
     }
