--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,9 +45,29 @@ services:
             test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
+#    rabbitmq:
+#        image: docker.io/bitnami/rabbitmq:3.9
+#        ports:
+#            - '4369:4369'
+#            - '5551:5551'
+#            - '5552:5552'
+#            - '5672:5672'
+#            - '25672:25672'
+#            - '15672:15672'
+#        environment:
+#            - RABBITMQ_SECURE_PASSWORD=no
+#            - RABBITMQ_LOGS=-
+#        volumes:
+#            - 'rabbitmq_data:/bitnami/rabbitmq/mnesia'
+#add user commands:
+    #rabbitmqctl add_user test test
+    #rabbitmqctl set_user_tags test administrator
+    #rabbitmqctl set_permissions -p / test ".*" ".*" ".*"
 networks:
     sail:
         driver: bridge
 volumes:
     sail-mysql:
         driver: local
+#    rabbitmq_data:
+#        driver: local
